--- a/index.html
+++ b/index.html
@@ -3,7 +3,9 @@
 
 <head>
     <meta charset="UTF-8" />
-    <title>Hello World Phaser</title>
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+
+    <title>Hello World Phaser - Beyond Tutorial</title>
     <script src="//cdn.jsdelivr.net/npm/phaser@3.11.0/dist/phaser.js"></script>
     <style type="text/css">
         body {
@@ -18,8 +20,8 @@
 
         var config = {
             type: Phaser.AUTO,
-            width: 800,
-            height: 600,
+            width: 360,
+            height: 640,
             physics: {
                 default: 'arcade',
                 arcade: {
@@ -42,11 +44,16 @@
         var score = 0;
         var gameOver = false;
         var scoreText;
+        var buttonLeft;
+        var buttonRight;
+        var isMovingLeft;
+        var isMovingRight;
 
         var game = new Phaser.Game(config);
 
         function preload() {
-            this.load.image('sky', 'assets/sky.png');
+            // Declare background asset
+            this.load.image('jungle', 'assets/background_mobile.jpg');
             this.load.image('ground', 'assets/platform.png');
             this.load.image('star', 'assets/star.png');
             this.load.image('bomb', 'assets/bomb.png');
@@ -54,23 +61,23 @@
         }
 
         function create() {
-            //  A simple background for our game
-            this.add.image(400, 300, 'sky');
+            //  Add background
+            this.add.image(180, 320, 'jungle');
 
             //  The platforms group contains the ground and the 2 ledges we can jump on
             platforms = this.physics.add.staticGroup();
 
             //  Here we create the ground.
             //  Scale it to fit the width of the game (the original sprite is 400x32 in size)
-            platforms.create(400, 568, 'ground').setScale(2).refreshBody();
+            platforms.create(0, 550, 'ground').refreshBody();
 
             //  Now let's create some ledges
-            platforms.create(600, 400, 'ground');
-            platforms.create(50, 250, 'ground');
-            platforms.create(750, 220, 'ground');
+            // platforms.create(600, 400, 'ground');
+            // platforms.create(50, 250, 'ground');
+            // platforms.create(750, 220, 'ground');
 
             // The player and its settings
-            player = this.physics.add.sprite(100, 450, 'dude');
+            player = this.physics.add.sprite(50, 420, 'dude');
 
             //  Player physics properties. Give the little guy a slight bounce.
             player.setBounce(0.2);
@@ -84,11 +91,11 @@
                 repeat: -1
             });
 
-            this.anims.create({
-                key: 'turn',
-                frames: [{ key: 'dude', frame: 4 }],
-                frameRate: 20
-            });
+            // this.anims.create({
+            //     key: 'turn',
+            //     frames: [{ key: 'dude', frame: 4 }],
+            //     frameRate: 20
+            // });
 
             this.anims.create({
                 key: 'right',
@@ -104,7 +111,7 @@
             stars = this.physics.add.group({
                 key: 'star',
                 repeat: 11,
-                setXY: { x: 12, y: 0, stepX: 70 }
+                setXY: { x: 12, y: 0, stepX: 30 }
             });
 
             stars.children.iterate(function (child) {
@@ -117,7 +124,7 @@
             bombs = this.physics.add.group();
 
             //  The score
-            scoreText = this.add.text(16, 16, 'score: 0', { fontSize: '32px', fill: '#000' });
+            scoreText = this.add.text(16, 16, 'score: 0', { fontSize: '32px', fill: '#FFF' });
 
             //  Collide the player and the stars with the platforms
             this.physics.add.collider(player, platforms);
@@ -128,6 +135,22 @@
             this.physics.add.overlap(player, stars, collectStar, null, this);
 
             this.physics.add.collider(player, bombs, hitBomb, null, this);
+
+            buttonLeft = this.add.text(32, 612, '<=')
+                .setOrigin(0.5)
+                .setPadding(16)
+                .setStyle({ backgroundColor: 'green' })
+                .setInteractive({ useHandCursor: true })
+                .on('pointerdown', () => { this.isMovingLeft = true })
+                .on('pointerup', () => { this.isMovingLeft = false })
+
+            buttonRight = this.add.text(332, 612, '=>')
+                .setOrigin(0.5)
+                .setPadding(16)
+                .setStyle({ backgroundColor: 'green' })
+                .setInteractive({ useHandCursor: true })
+                .on('pointerdown', () => { this.isMovingRight = true })
+                .on('pointerup', () => { this.isMovingRight = false })
         }
 
         function update() {
@@ -137,9 +160,9 @@
 
             if (cursors.left.isDown) {
                 player.setVelocityX(-160);
-
                 player.anims.play('left', true);
             }
+
             else if (cursors.right.isDown) {
                 player.setVelocityX(160);
 
@@ -148,12 +171,25 @@
             else {
                 player.setVelocityX(0);
 
-                player.anims.play('turn');
+                //  player.anims.play('turn');
             }
 
             if (cursors.up.isDown && player.body.touching.down) {
                 player.setVelocityY(-330);
             }
+
+            console.log("update" + this.isMovingLeft);
+            if (this.isMovingLeft) {
+                console.log("Update Left");
+                player.setVelocityX(-160);
+                player.anims.play('left', true);
+            }
+            if (this.isMovingRight) {
+                console.log("Update Right");
+                player.setVelocityX(160);
+                player.anims.play('right', true);
+            }
+
         }
 
         function collectStar(player, star) {
@@ -171,7 +207,7 @@
 
                 });
 
-                var x = (player.x < 400) ? Phaser.Math.Between(400, 800) : Phaser.Math.Between(0, 400);
+                var x = (player.x < 360) ? Phaser.Math.Between(400, 360) : Phaser.Math.Between(0, 360);
 
                 var bomb = bombs.create(x, 16, 'bomb');
                 bomb.setBounce(1);
